[tool.poetry]
package-mode = false
name = "edvend-token"
version = "0.1.0"
description = "Token obtainer for OAuth 2.0 for Kommo platform"
authors = ["luismaiabr <luismaiasombra@gmail.com>"]
readme = "README.md"
packages = [{include = "edvend"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
