[tool.poetry]
package-mode = false
name = "edvend-token"
version = "0.1.0"
description = "Token obtainer for OAuth 2.0 for Kommo platform"
authors = ["luismaiabr <luismaiasombra@gmail.com>"]
readme = "README.md"
packages = [{include = "edvend"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]  
uri = "uvicorn main:app --host 0.0.0.0 --port 443 --ssl-keyfile=key.pem --ssl-certfile=cert.pem --reload"  
uri_vps = "poetry run uvicorn main:app --host 0.0.0.0 --port 443 --ssl-keyfile=key.pem --ssl-certfile=cert.pem --reload"
